src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Shipping_Account_Fax__c</fullName>
        <formula>Shipping_Account__r.Fax</formula>
        <label>Shipping Account Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Account_Phone__c</fullName>
        <formula>Shipping_Account__r.Phone</formula>
        <label>Shipping Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Account__c</fullName>
        <formula>Shipping_Contact__r.Account.Name</formula>
        <label>Shipping Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_City__c</fullName>
        <formula>Shipping_Contact__r.Account.BillingCity</formula>
        <label>Shipping Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Country__c</fullName>
        <formula>Shipping_Contact__r.Account.BillingCountry</formula>
        <label>Shipping Contact Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Email__c</fullName>
        <formula>Shipping_Contact__r.Email</formula>
        <label>Shipping Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Job_Title__c</fullName>
        <formula>Shipping_Contact__r.Title</formula>
        <label>Shipping Contact Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Phone__c</fullName>
        <formula>Shipping_Contact__r.Phone</formula>
        <label>Shipping Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_State__c</fullName>
        <formula>Shipping_Contact__r.Account.BillingState</formula>
        <label>Shipping Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Street__c</fullName>
        <formula>Shipping_Contact__r.Account.BillingStreet</formula>
        <label>Shipping Contact Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact_Zip__c</fullName>
        <formula>Shipping_Contact__r.Account.BillingPostalCode</formula>
        <label>Shipping Contact Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary(Shipping) Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Shipping Contact)</relationshipLabel>
        <relationshipName>Job1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Country_from_Account_for_VAT__c</fullName>
        <formula>Shipping_Account__r.BillingCountry</formula>
        <label>Shipping Country from Account (for VAT)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Terms_Details__c</fullName>
        <inlineHelpText>Enter details for the Special Terms for this order.</inlineHelpText>
        <label>Special Terms Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if the order includes special terms</inlineHelpText>
        <label>Special Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Awaiting Customer Signature</fullName>
                </value>
                <value>
                    <fullName>Ready for Admin Processing</fullName>
                </value>
                <value>
                    <fullName>Administration in Progress</fullName>
                </value>
                <value>
                    <fullName>Order Entry Complete</fullName>
                </value>
                <value>
                    <fullName>Ready for Fulfillment</fullName>
                </value>
                <value>
                    <fullName>In Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Ready for Dispatch</fullName>
                </value>
                <value>
                    <fullName>In Service</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Enrollment</fullName>
                </value>
                <value>
                    <fullName>Awaiting Documents</fullName>
                </value>
                <value>
                    <fullName>Documents Recieved</fullName>
                </value>
                <value>
                    <fullName>Documents sent for Assessment</fullName>
                </value>
                <value>
                    <fullName>Assessment Passed</fullName>
                </value>
                <value>
                    <fullName>Certificate Dispatched</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Awaiting Return</fullName>
                </value>
                <value>
                    <fullName>On boarding in progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_total__c</fullName>
        <inlineHelpText>Quantity * Unit Price</inlineHelpText>
        <label>Subtotal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Status__c</fullName>
        <label>Tax Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Engine__c</fullName>
        <label>Tax Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Invoice_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Invoice Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to identify Orders for Test Invoices</inlineHelpText>
        <label>Test Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Billing_Contact__c</fullName>
        <formula>X3rd_Billing_Contact__r.Email</formula>
        <label>Third Billing Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Todays_MRR__c</fullName>
        <inlineHelpText>This is the Monthly Recurring Revenue calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</inlineHelpText>
        <label>Today&apos;s MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Todays_MRR_with_Tax__c</fullName>
        <inlineHelpText>This is the Monthly Recurring Revenue + Tax calculated on a schedule. This considers the recurring charges that are active today based on the Service Activation Date and Service End Date at the line level. Plz refer the help doc on how to schedule this.</inlineHelpText>
        <label>Today&apos;s MRR with Tax</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProfitPercent__c</fullName>
        <label>Total Profit Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <label>Total Contract Value (TCV)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Profit__c</fullName>
        <label>Total Profit (Excl Tax/VAT)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Grand Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage_Applied__c</fullName>
        <formula>IF((VAT__c = 0.00), 0, 20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Percentage Applied</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Roll_Up__c</fullName>
        <label>VAT Roll Up</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VMA_CustAccountCode__c</fullName>
        <formula>Account__r.KV_Asia_Account_Code__c</formula>
        <label>VMA Cust Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMA_Legacy_Acct_Code__c</fullName>
        <inlineHelpText>This is the VMA Account Code that was added to the order for the purposes of identifying the legacy accounts for VMA. This is being populated by data migration by Salesforce.com Admin to allow account consollidation and merging.</inlineHelpText>
        <label>VMA Legacy Acct Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VOD_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VOD Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wet_or_Dry_Cargo__c</fullName>
        <inlineHelpText>If using a Full VOD, select Wet or Dry Cargo</inlineHelpText>
        <label>Wet or Dry Cargo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Wet Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Withholding_Tax_Percentage__c</fullName>
        <inlineHelpText>Select the Withholding Tax Percentage</inlineHelpText>
        <label>Withholding Tax Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3rd_Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Third Billing Contact)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Total__c</fullName>
        <label>Year 1 Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Total__c</fullName>
        <formula>Year_1_Net_Total__c + Year_1_VAT__c + BMS_Year_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_1_VAT__c</fullName>
        <formula>Year_1_Net_Total__c * (VAT_Percentage_Applied__c / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 1 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Total__c</fullName>
        <label>Year 2 Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Total__c</fullName>
        <formula>Year_2_Net_Total__c + Year_2_VAT__c + BMS_Year_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_VAT__c</fullName>
        <formula>Year_2_Net_Total__c * (VAT_Percentage_Applied__c / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Net_Total__c</fullName>
        <label>Year 3 Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Total__c</fullName>
        <formula>Year_3_Net_Total__c + Year_3_VAT__c + BMS_Year_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_VAT__c</fullName>
        <formula>Year_3_Net_Total__c * (VAT_Percentage_Applied__c / 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Shipping_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VOD_Production_Team_Job</fullName>
        <filterScope>Queue</filterScope>
        <label>VOD Production Team</label>
        <queue>VOD_Production_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Order (InvoiceIT) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>Child_Order</fullName>
        <active>true</active>
        <label>Child Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Order</fullName>
        <active>true</active>
        <description>Used for master Agreements for Rentals and Subscriptions</description>
        <label>Master Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sale_Order</fullName>
        <active>true</active>
        <label>Sale Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>